lec1; added 1 exa, fixed a few typo

--- a/lec1.tex
+++ b/lec1.tex
@@ -2,28 +2,64 @@
 \section{Deterministic Finite Automaton (DFA)}
 % ==================================================
 
-Machine receives a string consisted of `1's and `0's as input.
+A machine consists of different states drawn in circles with names. Often a state drawn as
+a double circle is an ``acceptive state,'' and a plain circle indicates a ``rejective
+state.'' A machine receives a string consisted of `1's and `0's as input and the states
+change as the machine reads through input digits. An arrow is used to indicate which state
+is to start with. See \autoref{exa:a_DFA} for detailed information.
 
-\[
-    \xrightarrow{010110} \fbox{M} \xrightarrow{1/0 (True / False, Accept / Reject)}
-\]
+\begin{example}[A DFA]
+    \label{exa:a_DFA}
 
-\begin{example}[]
-    \label{}
-    % pic
+    Let's first look at the DFA below which starts at state $A$.
+    \centgraph{mp/dfa-0.pdf}
+
+    If the string ``010110'' is input to the machine, will it result in true or false?
+    Will the state be acceptive or rejective?
+    \[
+        \xrightarrow{010110}
+        \fbox{M}
+        \xrightarrow{1/0 \text{ (True / False, Accept / Reject)}}
+    \]
+
+    There are two arrows leaving state $A$: one with a label reading `1' which points to
+    state $B$ and one reading `0' which goes back to state $A$ itself. That means, if an
+    input digit reads `1,' the state changes to $B$, and if `2' the state stays in $A$.
+
+    Now step through the procedure:
+    \begin{compactenum}
+    \item
+        The machine starts off at state $A$ with input `0,' which, as explained above,
+        changes the state to $A$ itself.
+    \item
+        Next, the second digit `1' is read so the state is changed to $B$.
+    \item
+        The next digit `0' makes state $B$ to switch to state $C$.
+    \item
+        Then state $C$ reads `1' so no state change occurs.
+    \item
+        The next digit is `1' again so the state remains still on $C$.
+    \item
+        Last, the digit `0' switches the state from $C$ to $B$.
+    \end{compactenum}
+    Thus the input string ``010110'' changes the machine to state $B$, which is an
+    acceptive state.
+
 \end{example}
 
 \begin{definition}[DFA]
+    \label{def:DFA}
+
     A DFA is 5-tuple
     \[
         M = (Q,\Sigma,\delta,s,F)
     \]
     where
     \begin{compactdesc}
-    \item[$Q$] Finite set,  for states
-    \item[$\Sigma$] Finite set,  for input alphabet
-    \item[$s$] $\in Q$,     for start states
-    \item[$F$] $\subseteq Q$, for accepting states
+    \item[$Q$]      is a finite set,    for states
+    \item[$\Sigma$] is a finite set,    for input alphabet
+    \item[$s$]      $\in Q$,            for start states
+    \item[$F$]      $\subseteq Q$,      for accepting states
     \item[$\delta$]
         $Q \times \Sigma \mapsto Q$,
         a function that specifies the transition between states
@@ -32,7 +68,7 @@ Machine receives a string consisted of `1's and `0's as input.
 
 \begin{example}[]
     \label{}
-    According to the definition \autoref{def:DFA}, 
+    According to definition \autoref{def:DFA}, 
     the machine in \autoref{exa:a_DFA} can be denoted by 
     \[
         M = (Q,\Sigma,\delta,s,F)
@@ -68,8 +104,8 @@ Machine receives a string consisted of `1's and `0's as input.
     \[
         f_M(w)
         = \begin{cases}
-            \text{True},   \quad \delta^*(s,w) \in F
-            \text{False},  \quad \text{eles}
+            \text{True},   &\delta^*(s,w) \in F  \\
+            \text{False},  &\text{eles}
         \end{cases}
     \]
 \end{definition}
