minor changes of lec1 & 2

--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -296,26 +296,32 @@
 \newcommand{\phteq}{ \phantom{{}={}} }
 \renewcommand{\(}{ \left(  }
 \renewcommand{\)}{ \right) }
-\newcommand{\nth}{\ensuremath{^\text{th}} }
-\newcommand{\st}{\ensuremath{^\text{st}} }
-\newcommand{\nd}{\ensuremath{^\text{nd}} }
-\newcommand{\rd}{\ensuremath{^\text{rd}} }
-\newcommand{\dd}{{ \; \mathrm{d} }}
+\newcommand{\nth}{\ensuremath{^\text{th}}\xspace}
+\newcommand{\st}{\ensuremath{^\text{st}}\xspace}
+\newcommand{\nd}{\ensuremath{^\text{nd}}\xspace}
+\newcommand{\rd}{\ensuremath{^\text{rd}}\xspace}
+\newcommand{\dd}{{ \, \mathrm{d} }}
 \newcommand{\abs}[1]{{ \left\lvert #1 \right\rvert }}
+
+\newcommand{\set}[1]{{ \{\,#1\,\} }}
+\newcommand{\lst}[1]{{ \(\,#1\,\) }}
 
 %\newcommand{\dne}{ \mathrm{DNE} }	% Does Not Exist;
 %\newcommand{\defeq}{ \xlongequal{\mathrm{DEF}} }	% equal by definition;
 %\newcommand{\sqr}{ \ensuremath{^2} } % squared;
 % \newcommand{\cels}{{ \ensuremath{^\circ \mathrm{C}} }}
 %\newcommand{\fahr}{{ \ensuremath{^\circ \mathrm{F}} }}
+\newcommand{\Conf}{{ \mathrm{Conf} }}
+\newcommand{\true}{{ \text{True} }}
+\newcommand{\false}{{ \text{False} }}
 
-\newcommand{\combination}{ \mathrm{C} }
-\newcommand{\permutation}{ \mathrm{P} }
+\newcommand{\combination}{{ \mathrm{C} }}
+\newcommand{\permutation}{{ \mathrm{P} }}
 \newcommand{\variance}[1]{{ \mathrm{Var}(#1) }}
-\newcommand{\stirling}{ \mathrm{S} }
-\newcommand{\powerset}{ \mathbb{P} }
-\newcommand{\Degree}{ \mathbb{Deg} }
-\newcommand{\degree}{ \mathbb{deg} }
+\newcommand{\stirling}{{ \mathrm{S} }}
+\newcommand{\powerset}{{ \mathbb{P} }}
+\newcommand{\Degree}{{ \mathbb{Deg} }}
+\newcommand{\degree}{{ \mathbb{deg} }}
 
 %% visiblespace
 \renewcommand\textvisiblespace[1][.5em]{%
