--- a/lec1.tex
+++ b/lec1.tex
@@ -8,6 +8,9 @@ state.'' A machine receives a string consisted of `1's and `0's as input and the
 change as the machine reads through input digits. An arrow is used to indicate which state
 is to start with. See \autoref{exa:a_DFA} for detailed information.
 
+\subsection{Expressions of DfA's}
+% --------------------------------------------------
+
 \begin{example}[A DFA]
     \label{exa:a_DFA}
 
@@ -75,10 +78,10 @@ is to start with. See \autoref{exa:a_DFA} for detailed information.
     \]
     where
     \begin{compactitem}
-    \item $Q = \{ A,B,C \}$
-    \item $\Sigma = \{ 0,1 \}$
-    \item $s = \{ A \}$
-    \item $F = \{ B,C \}$
+    \item $Q        = \set{ A,B,C }$
+    \item $\Sigma   = \set{ 0,1 }$
+    \item $s        = \set{ A }$
+    \item $F        = \set{ B,C }$
     \end{compactitem}
     And function $\delta$ can be described by the table below.
     \begin{center} \begin{tabular}{Mc Mc Mc}
@@ -97,15 +100,15 @@ is to start with. See \autoref{exa:a_DFA} for detailed information.
     For any DFA $ M = (Q,\Sigma,\delta,s,F) $,
     let 
     \[
-        f_M : \Sigma^* \mapsto \{ \text{True}, \text{False} \}
+        f_M : \Sigma^* \mapsto \set{ \true, \false }
     \]
     where $\Sigma^*$ is a set of strings over $\Sigma$.
 
     \[
         f_M(w)
         = \begin{cases}
-            \text{True},   &\delta^*(s,w) \in F  \\
-            \text{False},  &\text{else}
+            \true,   &\delta^*(s,w) \in F  \\
+            \false,  &\text{else}
         \end{cases}
     \]
 \end{definition}
@@ -123,5 +126,4 @@ is to start with. See \autoref{exa:a_DFA} for detailed information.
     \]
     where $varepsilon$ is an empty string and $q \in Q, a \in \Sigma, w \in \Sigma^*)$.
 \end{definition}
-
 
