--- a/lec2.tex
+++ b/lec2.tex
@@ -1,5 +1,5 @@
 
-\subsection{Configurations of DfA's}
+\subsection{Configurations of DFA's}
 % --------------------------------------------------
 
 \begin{definition}[Configurations]
@@ -80,3 +80,4 @@
 %     L(M) = \set{ w \in \Sigma^* \mid f_M(w) = \true }
 %     L(M_1)  \Sigma^*
 % \]
+
