lec4; still needs modification; completed exa in lec3

--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -327,11 +327,12 @@
 \newcommand{\false}{{ \text{\upshape False} }}
 
 \newcommand{\DFA}{{ M = \lst{Q, \Sigma, \delta, s, F} }}
+\newcommand{\NFA}{{ N = \lst{Q, \Sigma, \delta, s, F} }}
 \newcommand{\combination}{{ \mathrm{C} }}
 \newcommand{\permutation}{{ \mathrm{P} }}
 \newcommand{\variance}[1]{{ \mathrm{Var}(#1) }}
 \newcommand{\stirling}{{ \mathrm{S} }}
-\newcommand{\powerset}{{ \mathbb{P} }}
+\newcommand{\powerset}{{ \mathcal{P} }}
 \newcommand{\Degree}{{ \mathbb{Deg} }}
 \newcommand{\degree}{{ \mathbb{deg} }}
 
@@ -468,6 +469,7 @@
 \input{lec1}
 \input{lec2}
 \input{lec3}
+\input{lec4}
 
 \end{document}
 
