--- a/lec1.tex
+++ b/lec1.tex
@@ -53,7 +53,7 @@ is to start with. See \autoref{exa:a_DFA} for detailed information.
 \begin{definition}[DFA]
     \label{def:DFA}
 
-    A DFA is a 5-tuple
+    A DFA is a $5$-tuple
     \[ \DFA \]
     where
     \begin{compactdesc}
