added simple_automata.mp : pack simplified automata cmd's

--- a/lec3.tex
+++ b/lec3.tex
@@ -28,7 +28,7 @@ machine is $\true$ is called the \emph{language} of the machine.
     $L_1$ is regular while $L_2$ is not. A binary number that is a power of $2$ consists
     of only one $1$ and all other digits should be $0$s. A DFA that recognizes the
     language would be
-    \centgraph{mp/dfa-1.pdf}
+    \centgraph[7cm]{mp/dfa-1.pdf}
 
 \end{example}
 
