--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -64,6 +64,9 @@
 %% 		Tables
 %%***********************************************
 
+% linestrech in arrays/tables
+\renewcommand{\arraystretch}{1.2}
+
 %% tables w/ wrapped lines;
 %\usepackage{tabularx}
 %	\newcommand{\ahsize}[1]{ \setlength{\hsize}{#1\hsize} }
