--- a/lec4.tex
+++ b/lec4.tex
@@ -141,7 +141,7 @@ needn't obey these restrictions. In particular, every DFA is also an NFA.
     \begin{align*}
         Q' &= \powerset(Q)  \\
         F' &= \set{ A \subseteq Q \mid A \cap F \not= \varnothing }  \\
-        s' &= E(\set{s}) = \set{q \in Q \mid \exists s
+        s' &= E\big(\set{s}\big) = \set{q \in Q \mid \exists s
                                                 \xrightarrow\varepsilon q_1
                                                 \xrightarrow\varepsilon q_2
                                                 \xrightarrow\varepsilon q_3
