lec5; modified lec4; added label of exa:R_closed_under_union in lec3

--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -331,6 +331,7 @@
 
 \newcommand{\DFA}{{ M = \lst{Q, \Sigma, \delta, s, F} }}
 \newcommand{\NFA}{{ N = \lst{Q, \Sigma, \delta, s, F} }}
+\newcommand{\reverse}{{ \mathrm{rev} }}
 \newcommand{\combination}{{ \mathrm{C} }}
 \newcommand{\permutation}{{ \mathrm{P} }}
 \newcommand{\variance}[1]{{ \mathrm{Var}(#1) }}
@@ -473,6 +474,7 @@
 \input{lec2}
 \input{lec3}
 \input{lec4}
+\input{lec5}
 
 \end{document}
 
