--- a/lec3.tex
+++ b/lec3.tex
@@ -1,4 +1,7 @@
 
+\subsection{Languages}
+% --------------------------------------------------
+
 A subset of $\Sigma^*$ of a DFA that contains all inputs to which the output of the
 machine is $\true$ is called the \emph{language} of the machine.
 
@@ -66,10 +69,10 @@ machine is $\true$ is called the \emph{language} of the machine.
 \end{example}
 
 \begin{example}[$\forall L_1, L_2$ \\ 
-    $
-        L_1 \in \mathbb R \vee L_2 \in \mathbb R
-        \implies L_1 \cup L_2 \in \mathbb R
-    $]
-        Yes, $\mathbb R$ is closed under union.
+        If   $L_1$ and $L_2 \in \mathbb R$,
+        then $L_1 \cup  L_2 \in \mathbb R$.
+    ]
+    \label{exa:R_closed_under_union}
+    Yes, $\mathbb R$ is closed under union.
 \end{example}
 
