used pagenumbering in main file

--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -466,9 +466,9 @@
 \begin{document}
 
 \maketitle
-\renewcommand{\thepage}{\roman{page}}\setcounter{page}{1}
+\pagenumbering{roman}
 \tableofcontents\clearpage
-\renewcommand{\thepage}{\arabic{page}}\setcounter{page}{1}
+\pagenumbering{arabic}
 
 \input{lec1}
 \input{lec2}
