fixed typo: lec2 DFA's -> DFAs; lec4 thm:NFA_to_DFA;

--- a/lec2.tex
+++ b/lec2.tex
@@ -1,5 +1,5 @@
 
-\subsection{Configurations of DFA's}
+\subsection{Configurations of DFAs}
 % --------------------------------------------------
 
 \begin{definition}[Configurations]
@@ -37,7 +37,7 @@
     \]
 \end{definition}
 
-\begin{definition}[] %% ?
+\begin{definition}[Transition Relations] %% ?
     $R_M \subseteq \Conf$
 
     \[
