--- a/lec4.tex
+++ b/lec4.tex
@@ -146,7 +146,7 @@ details in \autoref{dem:NFA_to_DFA}.
 \begin{theorem}
     \label{thm:NFA_to_DFA}
     \begin{align*}
-        \forall \text{\upshape DFA} \NFA,  \\
+        \forall \text{\upshape NFA} \NFA,  \\
         \exists \text{\upshape DFA} M = \lst{ Q',\Sigma,\delta',s',F' }
         \text{ s.t.\ }
         L(N) = L(M)
