lec8; needs editting

--- a/lec6.tex
+++ b/lec6.tex
@@ -83,9 +83,9 @@ is one practical example.
 
     With that, the set $L_1 \cdot L_2^* \cdot L_3$ can be now (roughly) seen as:
     \[
-        a digit \text{ and }
-        a number of ( a number of digits \text{ and } a comma ) \text{ and }
-        a digit
+        a\ digit \text{ and }
+        a\ number\ of ( a\ number\ of\ digits \text{ and } a\ comma ) \text{ and }
+        a\ digit
     \]
     Now, notice there is a leading digit and an ending one, why should one be in $L_1$ and
     the other $L_3$? Because matching from set $L_1$ rules out the numbers with leading
