--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -331,6 +331,7 @@
 
 \newcommand{\DFA}{{ M = \lst{Q, \Sigma, \delta, s, F} }}
 \newcommand{\NFA}{{ N = \lst{Q, \Sigma, \delta, s, F} }}
+\newcommand{\reducable}[2]{#1 \le_{\text{\upshape FST}} #2}
 \newcommand{\reverse}{{ \mathrm{rev} }}
 \newcommand{\combination}{{ \mathrm{C} }}
 \newcommand{\permutation}{{ \mathrm{P} }}
@@ -477,8 +478,9 @@
 \input{lec5}
 \input{lec6}
 \input{lec7}
-\input{lec8}
+% \input{lec8}
 \input{lec9}
+\input{lec10}
 
 \end{document}
 
