--- a/lec10.tex
+++ b/lec10.tex
@@ -9,26 +9,26 @@ a function.
 \begin{theorem}[]\ \\
     \label{thm:translation_of_DFA}
     $
-    \forall \text{\upshape FST} M = \lst{Q,\Sigma,\Gamma,\delta,s},   \\
-    \phantom{\forall} \text{\upshape DFA} M' = \lst{Q',\Gamma,\delta',s',F'},  \\
-    \exists \text{\upshape DFA} M'' = \lst{Q'',\Sigma,\delta'',s'',F''}
+    \forall \text{\upshape FST} F = \lst{Q_F,\Sigma,\Gamma,\delta_F,s_F},   \\
+    \phantom{\forall} \text{\upshape DFA} D = \lst{Q_D,\Gamma,\delta_D,s_D,F_D},  \\
+    \exists \text{\upshape DFA} M = \lst{Q,\Sigma,\delta,s,F}
     \text{ s.t.\ }
     $
     \[
-        L(M') = f_M^{-1} \( L(M') \) \text{ meaning }
-        L(M'') = \set{ w \in \Sigma^* \mid f_M(w) \in L(M') }.
+        L(M) = f_M^{-1} \( L(M_D) \) \text{ meaning }
+        L(M) = \set{ w \in \Sigma^* \mid f_M(w) \in L(M_D) }.
     \]
 \end{theorem}
 
 \begin{proof}[Proof of \autoref{thm:translation_of_DFA}]
     \begin{align*}
         \text{Let }
-        & Q'' = Q \times Q',  \\
-        & S'' = (s,s'),       \\
-        & F'' = Q \times F',  \\
-        & \delta'' \colon Q'' \times \Sigma \mapsto Q'' \text{ s.t.\ } \\
-        & \delta''((q,q'),a) = \big( q'', \delta'^*(q',w) \big)
-        \text{ where } (q'',w) = \delta(q,a).
+        & Q = Q_F \times Q_D,  \\
+        & S = (s_F,s_D),       \\
+        & F = Q_F \times F_D,  \\
+        & \delta \colon Q \times \Sigma \mapsto Q \text{ s.t.\ } \\
+        & \delta((q_F,q_D),a) = \big( q_F', \delta_D^*(q_D,w) \big)
+        \text{ where } (q_F',w) = \delta_F(q_F,a).
     \end{align*}
 \end{proof}
 
