changed usage of \reducable

--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -331,7 +331,7 @@
 
 \newcommand{\DFA}{{ M = \lst{Q, \Sigma, \delta, s, F} }}
 \newcommand{\NFA}{{ N = \lst{Q, \Sigma, \delta, s, F} }}
-\newcommand{\reducable}[2]{#1 \le_{\text{\upshape FST}} #2}
+\newcommand{\reducable}{{ \,\le_{\text{\upshape FST}}\, }}
 \newcommand{\reverse}{{ \mathrm{rev} }}
 \newcommand{\combination}{{ \mathrm{C} }}
 \newcommand{\permutation}{{ \mathrm{P} }}
