--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -332,6 +332,7 @@
 \newcommand{\DFA}{{ M = \lst{Q, \Sigma, \delta, s, F} }}
 \newcommand{\NFA}{{ N = \lst{Q, \Sigma, \delta, s, F} }}
 \newcommand{\reducable}{{ \,\le_{\text{\upshape FST}}\, }}
+\newcommand{\reducableN}{{ \,\le_{\text{\upshape NFST}}\, }}
 \newcommand{\reverse}{{ \mathrm{rev} }}
 \newcommand{\combination}{{ \mathrm{C} }}
 \newcommand{\permutation}{{ \mathrm{P} }}
@@ -481,6 +482,7 @@
 % \input{lec8}
 \input{lec9}
 \input{lec10}
+\input{lec11}
 
 \end{document}
 
