editted lec12, added label subsec:nonreg_lang in lec7.tex; added pics fst-2

--- a/lec7.tex
+++ b/lec7.tex
@@ -2,6 +2,7 @@
 %% notes on web page
 
 \subsection{Non-Regular Languages}
+\label{subsec:nonreg_lang}
 % --------------------------------------------------
 
 Are there non-regular languages?
