--- a/Notes_CSE105.tex
+++ b/Notes_CSE105.tex
@@ -170,18 +170,18 @@
 		filecolor=magenta,		% color of file links
 	}
 
-	%% page style
-	%%---------------------------------------------------------------------------
-	\usepackage{fancyhdr}
-	\pagestyle{fancy}
-	\lhead{}
-	\chead{}
-	\rhead{}
-	\renewcommand{\headrulewidth}{0pt}
-	\renewcommand{\footrulewidth}{0pt}
-	\lfoot{}
-	\cfoot{}
-	\rfoot{\thepage}
+%% page style
+%%---------------------------------------------------------------------------
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\lhead{}
+\chead{}
+\rhead{}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+\lfoot{}
+\cfoot{}
+\rfoot{\thepage}
 
 %% paragraphs
 %%---------------------------------------------------------------------------
@@ -484,8 +484,8 @@
 \input{lec10}
 \input{lec11}
 \input{lec12}
-\input{lec13}
-\input{lec14}
+% \input{lec13}
+% \input{lec14}
 
 \end{document}
 
