fixed a few typos

--- a/lec6.tex
+++ b/lec6.tex
@@ -133,7 +133,7 @@ can be replaced with
 \begin{theorem}[Equivalence of Regex and Regular Language]
     \[
         \forall L \in \mathbb R,
-        \exists \text{ Regex } E \text{ s.t.\ } L(E) = L.
+        \exists \text{ regex } E \text{ s.t.\ } L(E) = L.
     \]
 \end{theorem}
 
